[package]
name = "pollnet"
version = "0.6.0"
authors = ["probable-basilisk <basilisk@mtknn.com>"]
edition = "2021"

[dependencies]
tokio-tungstenite = {version = "^0.18.0", features = ["native-tls"]}
tungstenite = {version = "^0.18.0", features = ["native-tls"]}
futures = "*"
url = "*"
futures-util = "*"
hyper = {version = "*", features = ["server"]}
hyper-staticfile = "*"
http = "*"
nanoid = "*"
reqwest = "*"
log = "*"

[dependencies.tokio]
version = "*"
features = ["sync", "macros", "net"]

[dependencies.env_logger]
version = "^0.10.0"
default-features = false
features = ["humantime", "color", "auto-color"]

[lib]
name = "pollnet"
crate-type = ["cdylib"]
